--- a/ASHStatusItemPopover/ASHStatusItemPopover-Info.plist
+++ b/ASHStatusItemPopover/ASHStatusItemPopover-Info.plist
@@ -28,6 +28,8 @@
 	<string>Copyright © 2013 Adam Hartford. All rights reserved.</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
+	<key>LSUIElement</key>
+	<true/>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 </dict>
