--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ ASHStatusItemPopover.xcodeproj/project.pbxproj
 ASHStatusItemPopover.xcodeproj/project.pbxproj
 
 ASHStatusItemPopover.xcodeproj/project.pbxproj
+
+*.pbxproj
